Fix logo shrinking on smaller screens

--- a/src/app/base/components/GlobalSideNav/_index.scss
+++ b/src/app/base/components/GlobalSideNav/_index.scss
@@ -20,6 +20,7 @@
 
         .p-navigation__logo-tag {
           left: $spv--large;
+          height: 2.3rem !important;
         }
 
         .p-navigation__logo-title {
